# image-namer

./: .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  LICENSE  README.md  REVIEW.md  SPEC.md  TODO.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.junie/: guidelines.md
audit/: maintain-2026-02-15-192030-actions.md  maintain-2026-02-15-192030-retry-1-actions.md  maintain-2026-02-15-195442-actions.md  maintain-2026-02-21-120455-actions.md  maintain-2026-04-16-042700-actions.md  maintain-2026-05-11-051441-actions.md  maintain-2026-05-12-051358-actions.md  maintain-2026-05-15-070509-actions.md  maintain-2026-05-16-093509-actions.md  maintain-2026-06-08-040248-actions.md  maintain-2026-06-10-040119-actions.md  maintain-2026-06-10-042043-actions.md  maintain-2026-06-12-042212-actions.md  maintain-2026-06-13-041129-actions.md  maintain-2026-06-14-051048-actions.md  maintain-2026-06-15-051044-actions.md  maintain-2026-06-17-055455-actions.md  maintain-2026-06-25-033300-actions.md
docs/: getting-started.md  index.md  installation.md
docs/how-to/: batch-folder.md  cache-management.md  markdown-refs.md  provider-config.md  single-file.md  using-gui.md
docs/reference/: cache-structure.md  cli-commands.md  configuration.md  naming-rubric.md
examples/: referencer1.md  referencer2.md
src/: conftest.py  constants.py  main.py  main_assessment_spec.py  main_file_spec.py  main_folder_spec.py  main_refs_spec.py
src/operations/: __init__.py  adapters.py  adapters_spec.py  analyze_image.py  analyze_image_spec.py  apply_renames.py  apply_renames_spec.py  assess_name.py  assess_name_spec.py  batch_references.py  batch_references_spec.py  cache.py  cache_spec.py  display.py  display_spec.py  find_references.py  find_references_spec.py  gateway_factory.py  gateway_factory_spec.py  generate_name.py  generate_name_spec.py  models.py  models_spec.py  pipeline_factory.py  pipeline_factory_spec.py  ports.py  process_folder.py  process_folder_spec.py  process_image.py  process_image_spec.py  rename_status_display.py  rename_status_display_spec.py  text_utils.py  text_utils_spec.py  update_references.py  update_references_spec.py
src/ui/: __init__.py  cache_actions.py  cache_actions_spec.py  conftest.py  main.py  main_window.py  main_window_spec.py  processing_coordinator.py  processing_coordinator_spec.py  rename_actions.py  rename_actions_spec.py  rename_status_ui.py  rename_status_ui_spec.py  settings.py  status_messages.py  worker_logic.py  worker_logic_spec.py
src/ui/dialogs/: __init__.py
src/ui/models/: __init__.py  ui_models.py
src/ui/resources/: __init__.py
src/ui/widgets/: __init__.py  bottom_control_panel.py  conftest.py  image_preview_panel.py  image_preview_panel_spec.py  metadata_panel.py  metadata_panel_spec.py  provider_toolbar.py  provider_toolbar_spec.py  rename_table.py  rename_table_spec.py
src/ui/workers/: __init__.py  cache_loader.py  cache_loader_spec.py  rename_worker.py  rename_worker_spec.py
src/utils/: __init__.py  fs.py  fs_spec.py  next_available_name_spec.py
