[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-namer"
version = "0.1.0"
description = "Rename image files based on their visual contents using a model, with CLI and optional GUI."
keywords = ["images", "renamer", "cli", "gui"]
requires-python = ">=3.13"
authors = [
    { name = "Stacey Vetzal", email = "stacey@vetzal.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
# Main runtime dependencies. Keep minimal; GUI is optional for headless use.
dependencies = [
    "typer>=0.12.5",
    "rich>=13.7.0",
    "pydantic>=2.9.0",
    "mojentic",
    # PySide6 is large; include as optional dependency group "gui" below to keep base install light.
]

[project.optional-dependencies]
# Install with: pip install ".[dev]"
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "flake8>=7.1",
    "flake8-pyproject>=1.2",
    "mypy>=1.13",
]
# Install with: pip install ".[gui]"
# PySide6 provides the Qt-based GUI runtime.
# Note: wheels are platform-specific; pin loosely and let pip resolve the right one.
"gui" = [
    "PySide6>=6.7",
]

[project.urls]
Homepage = "https://github.com/svetzal/image-namer"
Issues = "https://github.com/svetzal/image-namer/issues"

# Using src-layout with a top-level module (src/main.py) for now.
[tool.setuptools]
# Map top-level modules/packages to the src directory
package-dir = { "" = "src" }
packages = ["operations"]

# Explicitly declare single-file modules that live directly in src/ (without a package dir)
# This matches the current repo structure that contains src/main.py
py-modules = ["main"]

[project.scripts]
image-namer = "main:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src"]
python_files = "*_spec.py"
python_functions = "should_*"
addopts = "-q --cov=src --cov-report=term-missing"

# Flake8 configuration (requires flake8-pyproject plugin)
[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".idea",
    "*.egg-info",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
