[build-system]
requires = ["setuptools>=82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-namer"
version = "2.1.0"
description = "Rename image files based on their visual contents using AI vision models."
readme = "README.md"
keywords = ["images", "renamer", "cli", "gui"]
requires-python = ">=3.13"
authors = [
    { name = "Stacey Vetzal", email = "stacey@vetzal.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
# Main runtime dependencies. Keep minimal; GUI is optional for headless use.
dependencies = [
    "typer>=0.24.0",
    "rich>=14.3.3",
    "pydantic>=2.12.5",
    "mojentic>=1.2.0",
    # PySide6 is large; include as optional dependency group "gui" below to keep base install light.
]

[project.optional-dependencies]
# Install with: uv sync --extra gui
# PySide6 provides the Qt-based GUI runtime.
# Note: wheels are platform-specific; pin loosely and let pip resolve the right one.
"gui" = [
    "PySide6>=6.7",
]

[dependency-groups]
# Dev dependencies — local only, never published to PyPI
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "mypy>=1.19.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.2",
]

[tool.uv]
default-groups = ["dev"]

[project.urls]
Homepage = "https://github.com/svetzal/image-namer"
Issues = "https://github.com/svetzal/image-namer/issues"

# Using src-layout with a top-level module (src/main.py) for now.
[tool.setuptools]
# Map top-level modules/packages to the src directory
package-dir = { "" = "src" }
packages = ["operations", "utils", "ui", "ui.models", "ui.widgets", "ui.workers", "ui.dialogs", "ui.resources"]

# Explicitly declare single-file modules that live directly in src/ (without a package dir)
# This matches the current repo structure that contains src/main.py and src/constants.py
py-modules = ["main", "constants"]

[project.scripts]
image-namer = "main:main"
image-namer-ui = "ui.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src"]
python_files = "*_spec.py"
python_functions = "should_*"
addopts = "-q --cov=src --cov-report=term-missing"

# Flake8 configuration (requires flake8-pyproject plugin)
[tool.flake8]
max-line-length = 120
max-complexity = 10
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".idea",
    "*.egg-info",
    "build",
    "dist",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
